--- a/public_html/styles/scss/_module.scss
+++ b/public_html/styles/scss/_module.scss
@@ -987,6 +987,7 @@ input[type="radio"], input[type="checkbox"]{
         line-height: 20px;
         &>p{
             margin-top: 0;
+            word-wrap: break-word;
         }
     }
 }
